--- a/latex_thesis/introduction/intro.tex
+++ b/latex_thesis/introduction/intro.tex
@@ -8,10 +8,10 @@ From the General Theory of Relativity, it is possible to obtain a tensorial wave
 Therefore, we propose in  section(\ref{from_equation_to_solution}) the derivation of the gravitational wave solution from the Einstein's field equation using the linearized approximation.
 Applying the transverse traceless gauge, we find out that the number of raditative degrees of freedom of the general theory of relativity is two.\\
 The triumph of theoretical prediction of the gravitational waves (GW) is confirmed by the several experiments.\\
-The first indirect evidence of the existence of gravitational waves was given by Hulse and Taylor in 1993 \cite{weisberg_relativistic_2004,weisberg_timing_2010}. 
+The first indirect evidence of the existence of gravitational waves was given by Hulse and Taylor \cite{weisberg_relativistic_2004,weisberg_timing_2010}. 
 From the study of the orbital decay of a binary pulsar, Hulse and Taylor inferred the emission of gravitational waves, since the two neutron stars were spiraling together at just the rate predicted by general relativity’s theory of gravitational radiation reaction.\\
-Subsequently, in 2016, the laser interferometer gravitational wave detector LIGO measured directly the signal of a gravitational wave produced by a binary black hole \cite{abbott_observation_2016}.
-And, one year later LIGO-Virgo detector network observed a gravitational-wave signal from the inspiral of two low-mass compact objects consistent with a binary neutron star (BNS) merger \cite{abbott_gw170817:_2017}.\\
+Subsequently, in 2015, the laser interferometer gravitational wave detector LIGO measured directly the signal of a gravitational wave produced by a binary black hole \cite{abbott_observation_2016}.
+And, two years later LIGO-Virgo detector network observed a gravitational-wave signal from the inspiral of two low-mass compact objects consistent with a binary neutron star (BNS) merger \cite{abbott_gw170817:_2017}.\\
 So, in order to understand the basic principles of gravitational wave detectors, in section(\ref{effects_gw}) we study how the gravitational waves perturb free falling particles.\\
 Then, by studying a ring of free falling test particles, we explain the physical interpretation of the two radiative degrees of freedom two polarization states of the GWs.\\
 The gravitational waves are not only the triumph of the General Relativity, but they also give us a completely new method to investigate the nature of binary systems. 
