--- a/latex_thesis/thesis.tex
+++ b/latex_thesis/thesis.tex
@@ -35,7 +35,17 @@ July 2018}
 
 %% ABSTRACT AND ACKNOWLEDGMENTS
 \begin{abstract1}
-A really interesting and fascinating abstract
+The observation of gravitational waves marks the beginning of a new era for studying the Universe.
+The gravitational radiation plays a crucial role in the theoretical predictions of General Relativity and in the study of violent astrophysical processes, such as compact binary mergers. 
+Therefore, we derive the gravitational wave solutions from the Einstein's field equation and we elucidate the implications of the theoretical predictions using different approaches.
+Solving the linearized Einstein's field equation, we show that the gravitational radiation produced by a source scales as $1/r$. \\
+We present simulations of equal-mass compact binaries with quasi-equilibrium initial conditions.
+The gravitational waves produced by black hole binaries with six different quasi-equilibrium initial configurations are studied analyzing the differences between the evolution of the systems.
+We investigate the evolution of a binary neutron star, and we relate the rest mass density evolution to the gravitational wave signal.
+We explain the communual characteristics of the gravitational waves of the black hole and neutron star binaries, and we briefly explain the differences between the nature of such astronomical objects.
+The theoretical prediction, that a the angular frequency of the gravitational wave is twice the orbital angular frequency of the rotating binary, is confirmed by the simulations through a Fourier analysis of the gravitational signal.\\
+All of the source code and parameters used for the simulations have been made publicly available, and they are all based on the open-source Einstein Toolkit code.  
+This not only makes it possible to re-run and re-analyze our data, but also enables others to directly build upon this work for future research.
 \end{abstract1}
 
 \clearpage
@@ -63,7 +73,7 @@ A really interesting and fascinating abstract
 \input{numerical_evolution/num_ev.tex}
 
 \clearpage
-\section{Conclusion}
+\section{Conclusions}
 \input{conclusion/conclusion.tex}
 
 
