--- a/latex_thesis/conclusion/conclusion.tex
+++ b/latex_thesis/conclusion/conclusion.tex
@@ -9,7 +9,7 @@ We derived the quadrupole formula stressing the importance of the approximations
 The main result of such example told us that the gravitational wave radiation has a frequency that is twice the orbital angular frequency.\\
 Subsequently we studied the simualtions of two compact binaries, and through a Fourier analysis we confirmed that the angular frequency of the gravitational waves of BBH and BNS is twice the orbital angular frequency.\\
 The orbital angular frequency is almost constant for the first part of the inspiralling phase, and therefore, in this time range it is possible to recognize a sinusoidal behavior of the gravitational wave similiar to the quadrupole formula approximation.
-However, the binary system looses energy in the emission of gravitational waves and, therefore, the radius of the binary system decreases. 
+However, the binary system loses energy in the emission of gravitational waves and, therefore, the radius of the binary system decreases. 
 As the radius decreases, the orbital angular frequency increases, and therefore, the angular frequency of the gravitational wave does as well. 
 During the evolution the aplitude of the GW increases until it reaches the maximum value before the merger.
 Both BBH and BNS show similiar gravitational singnals during the inspiralling phase.\\
