--- a/latex_thesis/conclusion/conclusion.tex
+++ b/latex_thesis/conclusion/conclusion.tex
@@ -1,5 +1,4 @@
-Using the weak field linearized equation, the Einstein's field equation in vacuum reduces to a tensorial form of the wave equation (\ref{wave_equation}).
-This gravitational wave equation tells us that the metric perturbation behaves as a wave and it travels at the speed of light.
+Using the weak field linearized equation, the Einstein's field equation in vacuum reduces to a tensorial form of the wave equation (\ref{wave_equation}), which tells us that the metric perturbation behaves as a wave and it travels at the speed of light.
 So, the metric perturbation is nothig but a propagating warpage of spacetime, that we call gravitational wave.\\
 Using the transverse traceless gaugue, we saw that the polarizations states of the gravitational radiation are only two: $h_{+}$ and $h_{\times}$.
 The two polarization modes are directly related to the way they stretch and squeeze spacetime and, therefore, they can change the proper distance between free falling particles according in the shape of $+$ or $\times$.
@@ -17,7 +16,8 @@ For a binary black hole, the gravitational wave signal is damped after the merge
 Furthermore, the bouncing in the gravitational wave amplitude of the BNS denotes that the cores are bouncing off each other.\\
 In addition, we tested succesfully the codes provided by the Einstein Toolkit \cite{EinsteinToolkit:web}, and we also tested the quasi-equilibrium initial conditions of \cite{tichy_quasi-equilibrium_2004}.\\
 Further researches and more accurate simulations should be done in order to precisely explain the oscillations mode of the orbital angular frequency and of the gravitational strain of BBH-b6, BBH-b7, BBH-b10.\\
-By combining the computational power of numerical relativity with the new "eyes" given by the gravitational wave detector, we will be able to understand thoroughly the connections between fascinating objects such black holes and neutron stars and the gravitational waves.
+We have analyzed only few of the many features that can be obtained from the gravitationa wave signals.
+In fact, by combining the powerful computational knowledge of numerical relativity with the new "eyes" given by the gravitational wave detectors, it is possible to study thoroughly fascinating atrophysical processes involving black holes mergers and neutron star gamma ray bursts.
 
 
 
