--- a/latex_thesis/production_gw/prod_gw.tex
+++ b/latex_thesis/production_gw/prod_gw.tex
@@ -235,7 +235,7 @@ Equation(\ref{h_TT_quadrupole_formula}) represents a general solution of the lin
 The quadrupole formula cannot be used for a black hole because within the Schwarzschild radius of a black hole there is a singularity, which leads to an infinite density.
 
 
-\subsection{The nature of the gravitational radiation}
+\subsection{The Nature of the Gravitational Radiation}
 The quadrupole formula (\ref{h_TT_quadrupole_formula}) and its derivation gives a  first insight into the properties of the gravitational waves and their sources.\\
 Firstly, the gravitational radiation has a \textbf{quadrupolar nature}, because the GW produced by an isolated nonrelativisitc object is proportional to the second derivative of the reduced quadrupole moment of the energy density. \\
 We justify qualitatively
