--- a/latex_thesis/effects_gw/ef_gw.tex
+++ b/latex_thesis/effects_gw/ef_gw.tex
@@ -247,9 +247,9 @@ h_{R} = \dfrac{1}{\sqrt{2}} (h_{+} - i h_{\times})
 h_{L} = \dfrac{1}{\sqrt{2}} (h_{+} + i h_{\times})
 \end{eqnarray}
 The effect of a pure $h_R$ wave would be to rotate the particles in a right-handed sense and similiarly for the left-handed mode $h_{L}$ Figure(\ref{left_and_right}). 
-It is important to stress that the particles do not travel around the ring, they just move in little epicycles.\\
-Another remarkable consequence of the plus $+$ and times $\times$ polarizations is that it is possible to relate the polarization states of classical gravitational waves to the kinds of particles we would expect to find upon quantization.
-The spin of a quantized field is directly realted to the transformation properties of that field under spatial rotations.
+It is important to stress that the particles do not travel around the ring, they just move in little epicycles \cite{carroll_spacetime_2003}.\\
+It is possible to relate the polarization states of classical gravitational waves to the kinds of particles we would expect to find.
+The spin of a quantized field is directly related to the transformation properties of that field under spatial rotations.
 For instance, the electromagnetic field has two independent polarization states, which can be described by vectors in the x-y plane, and they are invariant under a rotation by $360 \degree$.
 Upon quantization, the theory yields the photon, a massless spin-1 particle.
 The general rule is that the spin $s$ is related to the angle $\theta$ under which the polarization modes are in invariant by $s = 360 \degree /\theta$.
