--- a/latex_thesis/production_gw/prod_gw.tex
+++ b/latex_thesis/production_gw/prod_gw.tex
@@ -57,11 +57,11 @@ We have obtained a general solution, however it possible to derive a more specif
 \item \textbf{far field approximation}: the metric perturbation (\ref{h_retarded_solution}) is evaluated at large distances from the source
 \begin{equation}
 \label{far_field_approx}
-\abs{\vb{x}-\vb{y}} \approx \abs{x} \equiv r
+\abs{\vb{x}-\vb{y}} \approx \abs{\vb{x}} \equiv r
 \end{equation}
 The fractional error of this approximation scales as $\sim L/r$, where $L$ is the size of the source.
 
-\item \textbf{slowly moving source}: the light traverses the source much faster than the components of the cource itself do. Therefore, the source moves at non relativistic speeds.
+\item \textbf{slowly moving source}: the light traverses the source much faster than the components of the source itself do. Therefore, the source moves at non relativistic speeds.
 
 \item \textbf{isolated system}: the source of the gravitational radiation is an isolated and compact. We assume that our system and the radiation are not gravitationally influenced by other bodies.
 
