--- a/presentation/thesis_presentation.tex
+++ b/presentation/thesis_presentation.tex
@@ -71,8 +71,8 @@ University of Trento\\
 		\item Production of Gravitational Waves \\
 		\vspace{0.2cm}
 		\item Numerical Evolution of Compact Binaries
-%		\vspace{0.2cm}
-%		\item Blanket
+		\vspace{0.2cm}
+		\item Conclusions
 	\end{enumerate}
 \end{frame}
 
@@ -396,7 +396,6 @@ $\Leftrightarrow$
 \end{frame}
 
 \section{Conclusions}
-\subsection{}
 \begin{frame}{Conclusions}
 \emph{\textbf{"Gravitational
 waves will show us details of the bulk motion of
