--- a/latex_thesis/introduction/intro.tex
+++ b/latex_thesis/introduction/intro.tex
@@ -1,7 +1,7 @@
 The constancy of the speed of light as measured by observers in different reference frames forces space and time to be mixed into spacetime.
 When Albert Einstein developed the General Theory of Relativity, he endowed spacetime with curvature and made it dynamical, creating a theory in which all predictions for physical measurements are invariant under changes in coordinates.
 The speed of light is independent of the observer and it is the speed of causality.
-Therefore, gravity must be casual as well, and
+Therefore, gravity must be causal as well, and
 any change to a gravitating source is communicated to a distant observer no faster than the speed of light $c$.
 Such communication of a change in spacetime from a source to an observer leads to the idea that there must exists some notion of gravitational radiation.\\
 From the General Theory of Relativity, it is possible to obtain a tensorial wave equation, which governs the behavior of such gravitational radiation.
@@ -10,12 +10,12 @@ Applying the transverse traceless gauge, we find out that the number of raditati
 The triumph of theoretical prediction of the gravitational waves (GW) is confirmed by the several experiments.\\
 The first indirect evidence of the existence of gravitational waves was given by Hulse and Taylor \cite{weisberg_relativistic_2004,weisberg_timing_2010}. 
 From the study of the orbital decay of a binary pulsar, Hulse and Taylor inferred the emission of gravitational waves, since the two neutron stars were spiraling together at just the rate predicted by general relativity’s theory of gravitational radiation reaction.\\
-Subsequently, in 2015, the laser interferometer gravitational wave detector LIGO measured directly the signal of a gravitational wave produced by a binary black hole \cite{abbott_observation_2016}.
+Subsequently, in 2015, the laser interferometer gravitational wave detector LIGO measured directly the signal of a gravitational wave produced by a binary black hole system \cite{abbott_observation_2016}.
 And, two years later LIGO-Virgo detector network observed a gravitational-wave signal from the inspiral of two low-mass compact objects consistent with a binary neutron star (BNS) merger \cite{abbott_gw170817:_2017}.\\
 So, in order to understand the basic principles of gravitational wave detectors, in section(\ref{effects_gw}) we study how the gravitational waves perturb free falling particles.\\
 Then, by studying a ring of free falling test particles, we explain the physical interpretation of the two radiative degrees of freedom two polarization states of the GWs.\\
 The gravitational waves are not only the triumph of the General Relativity, but they also give us a completely new method to investigate the nature of binary systems. 
-Binary neutron stars and black holes can imprint a large amount of information in the produced gravitational radiations.
+Binary neutron stars and black holes imprint a large amount of information in the produced gravitational radiations.
 However, a thorough study of a gravitational signals needs to be combined with accurate numerical simulations of binary mergers in order to fully understand the link between the  gravitational wave production and their sources.\\
 So, firstly, we find a simple theoretical model by solving the linearized Einstein's field equation with the presence of matter in section(\ref{production_gw}).
 Then, we apply the obtained solution, the so-called quadrupole formula, for a slowly-moving binary source.
