--- a/presentation/thesis_presentation.tex
+++ b/presentation/thesis_presentation.tex
@@ -80,7 +80,7 @@ University of Trento\\
 \begin{frame}{Why Gravitational Waves?}
 The speed of light is the speed of causality.\\
 \vspace{0.7cm}
-Gravity must be casual.\\
+Gravity must be causal.\\
 \vspace{0.7cm}
 A change in a gravitating source is communicated to a distant observer not faster than light.\\
 \vspace{0.7cm}
@@ -91,11 +91,14 @@ Communication of a change in spacetime $\rightarrow$ Gravitational Waves
 \subsection{}
 \begin{frame}{Einstein's Field Equation}
 	Einstein's Field Equation is a rather complicated tensor equation
+	\vspace{0.8cm}
+	\\
 	\[
 	R_{\mu \nu} - \dfrac{1}{2} R g_{\mu \nu} = 
 \dfrac{8 \pi G}{c^4} T_{\mu \nu}
 	\]
 	\vspace{0.8cm}
+	\\
 	where
 \bea
 \Gamma ^{\alpha} _{\beta \gamma} = 
