--- a/latex_thesis/thesis.tex
+++ b/latex_thesis/thesis.tex
@@ -29,9 +29,15 @@ July 2018}
 \input{shared/custom_commands}
 \maketitle
 \clearpage
-
+\thispagestyle{empty}
 \tableofcontents
-\clearpage
+\pagebreak
+
+\afterpage{
+\pagestyle{empty}
+\newpage~\newpage~
+%\setcounter{page}{2}
+}
 
 %% ABSTRACT AND ACKNOWLEDGMENTS
 \begin{abstract1}
@@ -41,16 +47,19 @@ Therefore, we derive the gravitational wave solutions from the Einstein's field 
 Solving the linearized Einstein's field equation, we show that the gravitational radiation produced by a source scales as $1/r$. \\
 We present simulations of equal-mass compact binaries with quasi-equilibrium initial conditions.
 The gravitational waves produced by black hole binaries with six different quasi-equilibrium initial configurations are studied analyzing the differences between the evolution of the systems.
-We investigate the evolution of a binary neutron star, and we relate the rest mass density evolution to the gravitational wave signal.
+We investigate the evolution of a binary neutron star system, and we relate the rest mass density evolution to the gravitational wave signal.
 We explain the communual characteristics of the gravitational waves of black hole and neutron star binaries, and we briefly explain the differences between the nature of such astronomical objects.
 The theoretical prediction, that the angular frequency of the gravitational wave is twice the orbital angular frequency of the rotating binary, is confirmed by the simulations through a Fourier analysis of the gravitational signal.\\
 The source code and parameters used for the simulations are publicly available, and they are all based on the open-source Einstein Toolkit code.  
 This not only makes it possible to re-run and re-analyze our data, but also enables others to start future researches from this work.
 \end{abstract1}
+\setcounter{page}{1}
+
 
 \clearpage
 \section{Introduction}
 \input{introduction/intro.tex}
+
 
 \clearpage
 \section{From the Einstein's Field Equation\\ to Gravitational Wave solutions}
