--- a/presentation/thesis_presentation.tex
+++ b/presentation/thesis_presentation.tex
@@ -77,7 +77,7 @@ University of Trento\\
 \end{frame}
 
 \section{Introduction}
-\begin{frame}{Why Gravitational Waves?}
+\begin{frame}{What can Gravitational Waves tell us?}
 The speed of light is the speed of causality.\\
 \vspace{0.7cm}
 Gravity must be causal.\\
@@ -137,8 +137,9 @@ R=\eta^{\mu \nu} R_{\mu \nu} = :R^{\mu} _\mu:
 \bar{h} _{\mu \nu} = h_{\mu \nu} - \dfrac{1}{2} h \eta_{\mu \nu} \hspace{1.5cm} \bar{h}=\bar{h}^{\mu \nu} \eta_{\mu \nu} = - h
 \]
 \item Lorenz gauge $\partial_{\mu} h^{\mu \nu}=0$\\ 
+\vspace{0.5cm}
 \end{itemize}
-leads to the linearized Einstein's field equation
+Linearized Einstein's field equation
 \\
 \vspace{0.3cm}
 \[
@@ -163,22 +164,15 @@ In vacuum $T_{\mu \nu}=0$
 )
 \bar{h} _{\mu \nu} =0
 \]
-\vspace{1cm}
-Plane wave solution 
-\[
-\bar{h}_{\mu \nu} = A_{\mu \nu} \cos\qty[i\omega ( t- z/c)]
-\]
-\end{frame}
 
-\begin{frame}{Radiative degrees of freedom}
-The conditions imposed by the Transverse Traceless gauge
+Using the Transverse Traceless gauge
 \[
 h^{\text{TT}}_{0 \nu} = 0 \qquad
 \eta ^{\mu \nu } h^{\text{TT}}_{\mu \nu} =0
 \qquad
 \partial^{\mu} h^{\text{TT}} _{\mu \nu}=0
 \]
-allow us to obtain the only two radiative degrees of freedom
+A solution of the above equation is
 \[
 \bar{h}^{\text{TT}}_{\mu \nu} =
 \begin{bmatrix}
@@ -190,28 +184,10 @@ allow us to obtain the only two radiative degrees of freedom
 \]
 where 
 \bea
-h_{+} = A _{11} \cos \qty(\omega(t-z/c)) \\
+h_{+} = A _{11} \cos \qty(\omega(t-z/c)) \hspace{1cm}
 h_{\times} =  A _{12} \cos \qty(\omega(t-z/c))
 \eea
 \end{frame}
-
-
-\section{Effects of GWs}
-\subsection{}
-\begin{frame}{Geodesic Deviation Equation}
-For slowly-moving free-falling particles the geodesic deviation equations become
-\bea
-\pdv[2]{}{t} S^{1} &=& \dfrac{1}{2} S^{1} \pdv[2]{}{t} h_{+} + \dfrac{1}{2} S^{2} \pdv[2]{}{t} h_{\times} \\
-\pdv[2]{}{t} S^{2} &=& \dfrac{1}{2} S^{1} \pdv[2]{}{t} h_{\times} - \dfrac{1}{2} S^{2} \pdv[2]{}{t} h_{+}
-\eea
-first order solution
-\bea
-S^{1} = S^{1}(t=0) \qty(1 + \dfrac{1}{2} h_{+})+ \dfrac{1}{2} h_{\times} S^{2}(t=0) \\
-S^{2} = S^{2}(t=0) \qty(1 - \dfrac{1}{2} h_{+}) +  \dfrac{1}{2} h_{\times} S^{1}(t=0)
-\eea
-\end{frame}
-
-
 
 
 \begin{frame}{$+$ polarization $h_{\times}=0$}
@@ -254,36 +230,15 @@ S^{2} = S^{2}(t=0) \qty(1 - \dfrac{1}{2} h_{+}) +  \dfrac{1}{2} h_{\times} S^{1}
 )
 \bar{h} _{\mu \nu} =\dfrac{16 \pi G}{c^{4}} T_{\mu \nu}
 \]
-\vspace{1cm}
 
 \begin{itemize}
 \item \textbf{far field approximation}%: the metric perturbation $\bar{h}_{\mu \nu}$ is evaluated at large distances $r$ from the source.
-\vspace{0.3cm}
 \item \textbf{slowly moving source}%: the light traverses the source much faster than the components of the source itself do.
-\vspace{0.3cm}
 
 \item \textbf{isolated system}%: the source of the gravitational radiation is an isolated and compact.
 
 \end{itemize}
-\end{frame}
-
-\begin{frame}{Quadrupole Formula}
-A solution of the Linearized Einstein's Field equation is the Quadrupole Formula
-\bea
-h^{\text{TT}}_{ij} = \dfrac{2G}{c^{4}r} \dv[2]{\mathcal{I}_{kl}(t_r)}{t} \qty(:P_{i}^{k}::P_{j}^{l}: - \dfrac{1}{2} P_{ij} P^{kl})
-\eea
-where
-\[
-\mathcal{I} _{kj} = \int \rho(\vb{y}) \qty(y_{k} y_{j} - \dfrac{1}{3}\delta_{kj} y^{l} y_{l} ) \; \dd[3] y
-\]
-and
-\[
-P_{i j} = \delta_{i j} - n_{i} n_{j}
-\]
-\end{frame}
-
-\begin{frame}{slowly-moving equal-mass binary system}
-For an equal-mass binary system rotating at angular frequency $\omega$ and orbital radius $R$, the quadrupole formula becomes
+For an equal-mass binary system rotating at angular frequency $\omega$ and orbital radius $R$, the solution is
 \[
 h^{\text{TT}} _{ij} = \frac{8\,G M \,R^{2} \omega^{2}}{c^{4}\, r} \,
 \begin{bmatrix}
@@ -298,12 +253,9 @@ h^{\text{TT}} _{ij} = \frac{8\,G M \,R^{2} \omega^{2}}{c^{4}\, r} \,
 0 & 0 & 0\\
 \end{bmatrix}
 \]
-estimate of the amplitude
-\[
-\frac{8\,G M \,R^{2} \omega^{2}}{c^{4}\, r} = 1.6 \times 10^{-22}
-\]
-setting $M=M_{\odot}=2 \times 10^{30}$ kg, $\omega=\sqrt{GM/(4R^{3})}$, $R = 3r_s=8.86 $ km and $r =100$ Mpc.
 \end{frame}
+
+
 
 \begin{frame}{slowly-moving equal-mass binary system}
 \begin{figure}
@@ -408,6 +360,13 @@ dense concentrations of energy"}}\\
     \centering
     \animategraphics[loop,autoplay,scale=0.35]{24}{/Users/lorenzosperi/Documents/GitHub/thesis/gw/3d/frame-}{1}{62}
     \end{figure}
+\end{frame}
+
+\begin{frame}{References and Codes}
+The codes used for the numerical simulations, the scripts for the data analysis, figures and animations are available at the website\\
+\vspace{0.5cm}
+\url{https://github.com/lorenzsp/thesis}
+
 \end{frame}
 
 
