--- a/presentation/thesis_presentation.tex
+++ b/presentation/thesis_presentation.tex
@@ -96,41 +96,35 @@ Our method
 \subsection{}
 \begin{frame}{Einstein's Field Equation}
 	Einstein's Field Equation is a rather complicated tensor equation
-	\vspace{0.8cm}
-	\\
+
 	\[
 	G_{\mu \nu} \equiv R_{\mu \nu} - \dfrac{1}{2} R g_{\mu \nu} = 
 \dfrac{8 \pi G}{c^4} T_{\mu \nu}
 	\]
-	\vspace{0.8cm}
-	\\
-	where
-\bea
-\Gamma ^{\alpha} _{\beta \gamma} = 
-\dfrac{1}{2} g^{\alpha \rho} \qty(
-\partial_\beta g_{\gamma \rho} + 
-\partial_\gamma g_{\rho \beta} -
-\partial_\rho g_{\beta \gamma}
-)
-\\
-: R^\alpha _{\beta \gamma \sigma}:
-=
-:\Gamma ^\alpha _{\gamma \lambda}:\,
-:\Gamma ^\lambda _{\sigma \beta}:
--
-:\Gamma ^\alpha _{\sigma \lambda}:\,
-:\Gamma ^\lambda _{\gamma \beta}:
-+
-\partial_\gamma :\Gamma^\alpha _{\sigma \beta}: 
--
-\partial_\sigma :\Gamma^\alpha _{\gamma \beta} :
-\\
-R_{\mu \nu} = :R^\alpha _\mu \alpha _\nu: \hspace{1.5cm}
-R=\eta^{\mu \nu} R_{\mu \nu} = :R^{\mu} _\mu:
-\eea	
-\end{frame}
-
-\begin{frame}{Linearized Einstein's Field Equation}
+%
+%\bea
+%\Gamma ^{\alpha} _{\beta \gamma} = 
+%\dfrac{1}{2} g^{\alpha \rho} \qty(
+%\partial_\beta g_{\gamma \rho} + 
+%\partial_\gamma g_{\rho \beta} -
+%\partial_\rho g_{\beta \gamma}
+%)
+%\\
+%: R^\alpha _{\beta \gamma \sigma}:
+%=
+%:\Gamma ^\alpha _{\gamma \lambda}:\,
+%:\Gamma ^\lambda _{\sigma \beta}:
+%-
+%:\Gamma ^\alpha _{\sigma \lambda}:\,
+%:\Gamma ^\lambda _{\gamma \beta}:
+%+
+%\partial_\gamma :\Gamma^\alpha _{\sigma \beta}: 
+%-
+%\partial_\sigma :\Gamma^\alpha _{\gamma \beta} :
+%\\
+%R_{\mu \nu} = :R^\alpha _\mu \alpha _\nu: \hspace{1.5cm}
+%R=\eta^{\mu \nu} R_{\mu \nu} = :R^{\mu} _\mu:
+%\eea	
 \begin{itemize}
 \item Weak field linearized approximation
 	\[
@@ -144,9 +138,9 @@ R=\eta^{\mu \nu} R_{\mu \nu} = :R^{\mu} _\mu:
 \item Lorenz gauge $\partial_{\mu} h^{\mu \nu}=0$\\ 
 \vspace{0.5cm}
 \end{itemize}
+
 Linearized Einstein's field equation
-\\
-\vspace{0.3cm}
+
 \[
 \qty(
 \dfrac{1}{c^{2}}
@@ -156,6 +150,7 @@ Linearized Einstein's field equation
 )
 \bar{h} _{\mu \nu} =\dfrac{16 \pi G}{c^{4}} T_{\mu \nu}
 \]
+
 \end{frame}
 
 \begin{frame}{Linearized Einstein's Field Equation $T_{\mu \nu} =0$}
