thesis tex update

--- a/latex_thesis/numerical_evolution/num_ev.tex
+++ b/latex_thesis/numerical_evolution/num_ev.tex
@@ -42,7 +42,7 @@ Thus, we integrate twice in time in order to get the complex-valued gravitationa
 \, \dd t^{*} \,  \dd \hat{t}
 \]
 where we used the trapezodail rule for the numeric integration.
-The resulting quantity obtained with the procedure described above show a left-over  drift in the GW. Performing a fit to a second order polynomial for both the real and the imaginary parts of $\tilde{h}(t)$, it is possible to elimitae as:
+The resulting quantity obtained with the procedure described above show a left-over  drift in the GW. Performing a fit to a second order polynomial for both the real and the imaginary parts of $\tilde{h}(t)$, it is possible to eliminate the left-over  drift by using:
 \begin{eqnarray}
 \label{h_+_numerical}
 h_{+} (t)= \Re {\tilde{h}} -  \qty(Q_0 ^{R} + Q_1 ^{R} t + Q_2 ^{R} t^{2}) \\
