--- a/latex_thesis/thesis.tex
+++ b/latex_thesis/thesis.tex
@@ -3,6 +3,9 @@
 \usepackage[top=1.5in, bottom=1.5in, left=1in, right=1in]{geometry}
 
 
+% hot to compile in texmaker, sequence:
+% pdflatex %.tex | biber % | pdflatex %.tex | evince %.pdf
+
 % le righe importanti
 \usepackage[backend=biber,style=numeric,sorting=none]{biblatex}
 \addbibresource{bibliography/bibthesis.bib} % qui metti il path del file .bib 
