--- a/latex_thesis/conclusion/conclusion.tex
+++ b/latex_thesis/conclusion/conclusion.tex
@@ -6,7 +6,7 @@ Such effect can be exploited to detect gravitational waves using interferometers
 We analyzed the nature of gravitational wave  and we found out that it has quadrupolar nature and the GW amplitude scales as $1/r$.
 We derived the quadrupole formula stressing the importance of the approximations and we applied it to a slowly moving binary system.
 The main result of such example told us that the gravitational wave radiation has a frequency that is twice the orbital angular frequency.\\
-Subsequently we studied the simualtions of two compact binaries, and through a Fourier analysis we confirmed that the angular frequency of the gravitational waves of BBH and BNS is twice the orbital angular frequency.\\
+Subsequently we studied the simulations of two compact binaries, and through a Fourier analysis we confirmed that the angular frequency of the gravitational waves of BBH and BNS is twice the orbital angular frequency.\\
 The orbital angular frequency is almost constant for the first part of the inspiralling phase, and therefore, in this time range it is possible to recognize a sinusoidal behavior of the gravitational wave similiar to the quadrupole formula approximation.
 However, the binary system loses energy in the emission of gravitational waves and, therefore, the radius of the binary system decreases. 
 As the radius decreases, the orbital angular frequency increases, and therefore, the angular frequency of the gravitational wave does as well. 
